Working on test cases

--- a/BeepSendSDK/BeepSendSDKDocumentation/BSConnection_h/index.html
+++ b/BeepSendSDK/BeepSendSDKDocumentation/BSConnection_h/index.html
@@ -261,8 +261,7 @@ function disclosure_triangle(elt) {
 <div class="spec_sheet_info_box"><table cellspacing="0" class="specbox"><tr>
 <td scope="row"><b>Includes:</b></td>
 <td><div style="margin-bottom:1px"><div class="content_text">
-<!-- a logicalPath="//apple_ref/doc/header/BSGeneralModel.h" machineGenerated="true" -->"BSGeneralModel.h"<!-- /a --><br><!-- a logicalPath="//apple_ref/doc/header/BSStructs.h" machineGenerated="true" -->"BSStructs.h"<!-- /a -->
-</div></div></td>
+<!-- a logicalPath="//apple_ref/doc/header/BSGeneralModel.h" machineGenerated="true" -->"BSGeneralModel.h"<!-- /a --><br><!-- a logicalPath="//apple_ref/doc/header/BSStructs.h" machineGenerated="true" -->"BSStructs.h"<!-- /a --><br><a machinegenerated="true" href="../BSPricelist_h/index.html#//apple_ref/doc/header/BSPricelist.h" logicalPath="//apple_ref/doc/header/BSPricelist.h" target="_top">"BSPricelist.h"</a><br><a machinegenerated="true" href="../BSCallbacks_h/index.html#//apple_ref/doc/header/BSCallbacks.h" logicalPath="//apple_ref/doc/header/BSCallbacks.h" target="_top">"BSCallbacks.h"</a><br><a machinegenerated="true" href="../BSBatch_h/index.html#//apple_ref/doc/header/BSBatch.h" logicalPath="//apple_ref/doc/header/BSBatch.h" target="_top">"BSBatch.h"</a><br><a machinegenerated="true" href="../BSEstimateCost_h/index.html#//apple_ref/doc/header/BSEstimateCost.h" logicalPath="//apple_ref/doc/header/BSEstimateCost.h" target="_top">"BSEstimateCost.h"</a><br><a machinegenerated="true" href="../BSHLR_h/index.html#//apple_ref/doc/header/BSHLR.h" logicalPath="//apple_ref/doc/header/BSHLR.h" target="_top">"BSHLR.h"</a><br><a machinegenerated="true" href="../BSLookup_h/index.html#//apple_ref/doc/header/BSLookup.h" logicalPath="//apple_ref/doc/header/BSLookup.h" target="_top">"BSLookup.h"</a><br><a machinegenerated="true" href="../BSError_h/index.html#//apple_ref/doc/header/BSError.h" logicalPath="//apple_ref/doc/header/BSError.h" target="_top">"BSError.h"</a></div></div></td>
 </tr></table></div>
 <h2>Introduction</h2>
 <p><!-- headerDoc=abstract;uid=//apple_ref/doc/header/BSConnection.h;name=start --><!-- begin abstract -->Use the links in the table of contents to the left to access the documentation.<br><!-- end abstract --><!-- headerDoc=abstract;uid=//apple_ref/doc/header/BSConnection.h;name=end --></p>
@@ -276,7 +275,7 @@ function disclosure_triangle(elt) {
 <p class="gapBeforeFooter">&nbsp;</p>
 <hr class="afterFooter">
 <div class="hd_copyright_and_timestamp">
-<p class="hd_timestamp">Last Updated: Tuesday, July 29, 2014
+<p class="hd_timestamp">Last Updated: Thursday, July 31, 2014
 </p>
 </div>
 </td>
