--- a/BeepSendSDK/BeepSendSDKDocumentation/BSTransfer_h/Classes/BSTransfer/index.html
+++ b/BeepSendSDK/BeepSendSDKDocumentation/BSTransfer_h/Classes/BSTransfer/index.html
@@ -270,7 +270,7 @@ function disclosure_triangle(elt) {
 </tr>
 </table></div>
 <h2>Introduction</h2>
-<!-- begin discussion --><!-- headerDoc=discussion;uid=//apple_ref/occ/cl/BSTransfer;name=start --><p>Transfer model is used when you want to make transaction between two wallets.
+<!-- begin discussion --><!-- headerDoc=discussion;uid=//apple_ref/occ/cl/BSTransfer;name=start --><p>Transfer model is response when funds are transfered between wallets.
 <!-- headerDoc=discussion;uid=//apple_ref/occ/cl/BSTransfer;name=end --><!-- end discussion -->
 </p>
 <hr class="afterClassOrHeaderInfo">
@@ -373,7 +373,7 @@ function disclosure_triangle(elt) {
 <p class="gapBeforeFooter">&nbsp;</p>
 <hr class="afterFooter">
 <div class="hd_copyright_and_timestamp">
-<p class="hd_timestamp">Last Updated: Tuesday, July 29, 2014
+<p class="hd_timestamp">Last Updated: Thursday, July 31, 2014
 </p>
 </div>
 </td>
