--- a/BeepSendSDK/BeepSendSDKDocumentation/BSUser_h/Classes/BSUser/toc.html
+++ b/BeepSendSDK/BeepSendSDKDocumentation/BSUser_h/Classes/BSUser/toc.html
@@ -52,7 +52,7 @@
 <span class="hd_tocAccess">Instance Methods</span>
 <ul class="tocSubEntryList">
 <!-- instance method --><li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSUser/addMultipleContacts:onCompletion:" target="_top">addMultipleContacts:&zwj;onCompletion:&zwj;</a></li>
-<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSUser/changePassword:withNewPassword:" target="_top">changePassword:&zwj;withNewPassword:&zwj;</a></li>
+<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSUser/changePassword:withNewPassword:onCompletion:" target="_top">changePassword:&zwj;withNewPassword:&zwj;onCompletion:&zwj;</a></li>
 <li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSUser/getAllContacts" target="_top">getAllContacts</a></li>
 <li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSUser/getAllContactsOnCompletion:" target="_top">getAllContactsOnCompletion:</a></li>
 <li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSUser/getAllGroups" target="_top">getAllGroups</a></li>
@@ -70,11 +70,11 @@
 <li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSUser/initUserWithPassword:andNewPassword:" target="_top">initUserWithPassword:&zwj;andNewPassword:&zwj;</a></li>
 <li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSUser/initWithName:phone:defaultConnection:userTypes:verified:" target="_top">initWithName:&zwj;phone:&zwj;defaultConnection:&zwj;userTypes:&zwj;verified:&zwj;</a></li>
 <li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSUser/initWithUserID:" target="_top">initWithUserID:</a></li>
-<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSUser/resetUserTokenWithPassword:" target="_top">resetUserTokenWithPassword:</a></li>
+<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSUser/resetUserTokenWithPassword:onCompletion:" target="_top">resetUserTokenWithPassword:&zwj;onCompletion:&zwj;</a></li>
 <li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSUser/searchContactsWithQuery:inGroup:limit:onCompletion:" target="_top">searchContactsWithQuery:&zwj;inGroup:&zwj;limit:&zwj;onCompletion:&zwj;</a></li>
 <li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSUser/searchGroupsWithQuery:limit:onCompletion:" target="_top">searchGroupsWithQuery:&zwj;limit:&zwj;onCompletion:&zwj;</a></li>
-<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSUser/updateUser" target="_top">updateUser</a></li>
-<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSUser/updateUserEmailWithPassword:" target="_top">updateUserEmailWithPassword:</a></li>
+<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSUser/updateUserEmailWithPassword:onCompletion:" target="_top">updateUserEmailWithPassword:&zwj;onCompletion:&zwj;</a></li>
+<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSUser/updateUserOnCompletion:" target="_top">updateUserOnCompletion:</a></li>
 </ul>
 </div>
 </div>
