--- a/BeepSendSDK/BeepSendSDKDocumentation/BSUser_h/index.html
+++ b/BeepSendSDK/BeepSendSDKDocumentation/BSUser_h/index.html
@@ -261,8 +261,7 @@ function disclosure_triangle(elt) {
 <div class="spec_sheet_info_box"><table cellspacing="0" class="specbox"><tr>
 <td scope="row"><b>Includes:</b></td>
 <td><div style="margin-bottom:1px"><div class="content_text">
-<!-- a logicalPath="//apple_ref/doc/header/BSGeneralModel.h" machineGenerated="true" -->"BSGeneralModel.h"<!-- /a -->
-</div></div></td>
+<!-- a logicalPath="//apple_ref/doc/header/BSGeneralModel.h" machineGenerated="true" -->"BSGeneralModel.h"<!-- /a --><br><a machinegenerated="true" href="../BSWallet_h/index.html#//apple_ref/doc/header/BSWallet.h" logicalPath="//apple_ref/doc/header/BSWallet.h" target="_top">"BSWallet.h"</a><br><a machinegenerated="true" href="../BSVerified_h/index.html#//apple_ref/doc/header/BSVerified.h" logicalPath="//apple_ref/doc/header/BSVerified.h" target="_top">"BSVerified.h"</a><br><a machinegenerated="true" href="../BSCustomer_h/index.html#//apple_ref/doc/header/BSCustomer.h" logicalPath="//apple_ref/doc/header/BSCustomer.h" target="_top">"BSCustomer.h"</a><br><a machinegenerated="true" href="../BSGroup_h/index.html#//apple_ref/doc/header/BSGroup.h" logicalPath="//apple_ref/doc/header/BSGroup.h" target="_top">"BSGroup.h"</a><br><a machinegenerated="true" href="../BSContact_h/index.html#//apple_ref/doc/header/BSContact.h" logicalPath="//apple_ref/doc/header/BSContact.h" target="_top">"BSContact.h"</a><br><a machinegenerated="true" href="../BSMCCMNC_h/index.html#//apple_ref/doc/header/BSMCCMNC.h" logicalPath="//apple_ref/doc/header/BSMCCMNC.h" target="_top">"BSMCCMNC.h"</a><br><a machinegenerated="true" href="../BSError_h/index.html#//apple_ref/doc/header/BSError.h" logicalPath="//apple_ref/doc/header/BSError.h" target="_top">"BSError.h"</a></div></div></td>
 </tr></table></div>
 <h2>Introduction</h2>
 <p><!-- headerDoc=abstract;uid=//apple_ref/doc/header/BSUser.h;name=start --><!-- begin abstract -->Use the links in the table of contents to the left to access the documentation.<br><!-- end abstract --><!-- headerDoc=abstract;uid=//apple_ref/doc/header/BSUser.h;name=end --></p>
@@ -276,7 +275,7 @@ function disclosure_triangle(elt) {
 <p class="gapBeforeFooter">&nbsp;</p>
 <hr class="afterFooter">
 <div class="hd_copyright_and_timestamp">
-<p class="hd_timestamp">Last Updated: Tuesday, July 29, 2014
+<p class="hd_timestamp">Last Updated: Thursday, July 31, 2014
 </p>
 </div>
 </td>
