--- a/BeepSendSDK/BeepSendSDKDocumentation/masterTOC.html
+++ b/BeepSendSDK/BeepSendSDKDocumentation/masterTOC.html
@@ -200,7 +200,7 @@
 <a logicalpath="//apple_ref/occ/instm/BSGroup/addContacts:" retarget="yes" href="BSGroup_h/Classes/BSGroup/index.html#//apple_ref/occ/instm/BSGroup/addContacts:">-[ BSGroup addContacts: ]</a><br>
 </td>
 <td width="33%">
-<a logicalpath="//apple_ref/occ/instm/BSUser/changePassword:withNewPassword:" retarget="yes" href="BSUser_h/Classes/BSUser/index.html#//apple_ref/occ/instm/BSUser/changePassword:withNewPassword:">-[ BSUser changePassword:withNewPassword: ]</a><br>
+<a logicalpath="//apple_ref/occ/instm/BSUser/changePassword:withNewPassword:onCompletion:" retarget="yes" href="BSUser_h/Classes/BSUser/index.html#//apple_ref/occ/instm/BSUser/changePassword:withNewPassword:onCompletion:">-[ BSUser changePassword:withNewPassword:onCompletion: ]</a><br>
 </td>
 </tr>
 <tr>
@@ -409,7 +409,7 @@
 <a logicalpath="//apple_ref/occ/clm/BSMessage/flashMessageWithBody:from:to:" retarget="yes" href="BSMessage_h/Classes/BSMessage/index.html#//apple_ref/occ/clm/BSMessage/flashMessageWithBody:from:to:">+[ BSMessage flashMessageWithBody:from:to: ]</a><br>
 </td>
 <td width="33%">
-<a logicalpath="//apple_ref/occ/instm/BSUser/resetUserTokenWithPassword:" retarget="yes" href="BSUser_h/Classes/BSUser/index.html#//apple_ref/occ/instm/BSUser/resetUserTokenWithPassword:">-[ BSUser resetUserTokenWithPassword: ]</a><br>
+<a logicalpath="//apple_ref/occ/instm/BSUser/resetUserTokenWithPassword:onCompletion:" retarget="yes" href="BSUser_h/Classes/BSUser/index.html#//apple_ref/occ/instm/BSUser/resetUserTokenWithPassword:onCompletion:">-[ BSUser resetUserTokenWithPassword:onCompletion: ]</a><br>
 </td>
 </tr>
 <tr>
@@ -442,7 +442,7 @@
 <a logicalpath="//apple_ref/occ/instm/BSMessage/initMessageWithID:andErrors:forMessage:" retarget="yes" href="BSMessage_h/Classes/BSMessage/index.html#//apple_ref/occ/instm/BSMessage/initMessageWithID:andErrors:forMessage:">-[ BSMessage initMessageWithID:andErrors:forMessage: ]</a><br>
 </td>
 <td width="33%">
-<a logicalpath="//apple_ref/occ/instm/BSUser/updateUser" retarget="yes" href="BSUser_h/Classes/BSUser/index.html#//apple_ref/occ/instm/BSUser/updateUser">-[ BSUser updateUser ]</a><br>
+<a logicalpath="//apple_ref/occ/instm/BSUser/updateUserEmailWithPassword:onCompletion:" retarget="yes" href="BSUser_h/Classes/BSUser/index.html#//apple_ref/occ/instm/BSUser/updateUserEmailWithPassword:onCompletion:">-[ BSUser updateUserEmailWithPassword:onCompletion: ]</a><br>
 </td>
 </tr>
 <tr>
@@ -453,7 +453,7 @@
 <a logicalpath="//apple_ref/occ/instm/BSMessage/initMessageWithID:batch:recipients:sender:errors:recipientGroups:" retarget="yes" href="BSMessage_h/Classes/BSMessage/index.html#//apple_ref/occ/instm/BSMessage/initMessageWithID:batch:recipients:sender:errors:recipientGroups:">-[ BSMessage initMessageWithID:batch:recipients:sender:errors:recipientGroups: ]</a><br>
 </td>
 <td width="33%">
-<a logicalpath="//apple_ref/occ/instm/BSUser/updateUserEmailWithPassword:" retarget="yes" href="BSUser_h/Classes/BSUser/index.html#//apple_ref/occ/instm/BSUser/updateUserEmailWithPassword:">-[ BSUser updateUserEmailWithPassword: ]</a><br>
+<a logicalpath="//apple_ref/occ/instm/BSUser/updateUserOnCompletion:" retarget="yes" href="BSUser_h/Classes/BSUser/index.html#//apple_ref/occ/instm/BSUser/updateUserOnCompletion:">-[ BSUser updateUserOnCompletion: ]</a><br>
 </td>
 </tr>
 <tr>
