--- a/BeepSendSDK/BeepSendSDKDocumentation/BSConnection_h/Classes/BSConnection/toc.html
+++ b/BeepSendSDK/BeepSendSDKDocumentation/BSConnection_h/Classes/BSConnection/toc.html
@@ -65,13 +65,13 @@
 <li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSConnection/initConnectionWithID:apiToken:callbacks:customer:description:label:systemID:tlvformccandmnc:type:users:wallet:whitelist:password:" target="_top">initConnectionWithID:&zwj;apiToken:&zwj;callbacks:&zwj;customer:&zwj;description:&zwj;label:&zwj;systemID:&zwj;tlvformccandmnc:&zwj;type:&zwj;users:&zwj;wallet:&zwj;whitelist:&zwj;password:&zwj;</a></li>
 <li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSConnection/initWithConnectionModel:withNewPassword:" target="_top">initWithConnectionModel:&zwj;withNewPassword:&zwj;</a></li>
 <li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSConnection/initWithConnectionModel:withNewToken:" target="_top">initWithConnectionModel:&zwj;withNewToken:&zwj;</a></li>
-<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSConnection/resetConnectionToken" target="_top">resetConnectionToken</a></li>
+<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSConnection/resetConnectionTokenOnCompletion:" target="_top">resetConnectionTokenOnCompletion:&zwj;</a></li>
 <li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSConnection/sendMultipleSMS:withCompletionBlock:" target="_top">sendMultipleSMS:&zwj;withCompletionBlock:&zwj;</a></li>
 <li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSConnection/sendSMS:withCompletionBlock:" target="_top">sendSMS:withCompletionBlock:</a></li>
 <li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSConnection/setLookupPageLimit:" target="_top">setLookupPageLimit:</a></li>
 <li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSConnection/smsCountForMessage:" target="_top">smsCountForMessage:</a></li>
 <li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSConnection/smsCountForMessages:" target="_top">smsCountForMessages:</a></li>
-<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSConnection/updateConnection" target="_top">updateConnection</a></li>
+<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSConnection/updateConnectionOnCompletion:" target="_top">updateConnectionOnCompletion:</a></li>
 <li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSConnection/validateHLRForNumber:onCompletion:" target="_top">validateHLRForNumber:&zwj;onCompletion:&zwj;</a></li>
 <li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSConnection/validateSMS:onCompletion:" target="_top">validateSMS:onCompletion:</a></li>
 </ul>
