--- a/BeepSendSDK/BeepSendSDKDocumentation/BSContact_h/Classes/BSContact/toc.html
+++ b/BeepSendSDK/BeepSendSDKDocumentation/BSContact_h/Classes/BSContact/toc.html
@@ -48,9 +48,9 @@
 <ul class="tocSubEntryList">
 <!-- instance method --><li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSContact/initContactWithID:firstName:lastName:phoneNumber:group:errors:" target="_top">initContactWithID:&zwj;firstName:&zwj;lastName:&zwj;phoneNumber:&zwj;group:&zwj;errors:&zwj;</a></li>
 <li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSContact/initContactWithPhoneNumber:firstName:lastName:group:" target="_top">initContactWithPhoneNumber:&zwj;firstName:&zwj;lastName:&zwj;group:&zwj;</a></li>
-<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSContact/removeContact" target="_top">removeContact</a></li>
-<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSContact/saveContact" target="_top">saveContact</a></li>
-<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSContact/updateContact" target="_top">updateContact</a></li>
+<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSContact/removeContactOnCompletion:" target="_top">removeContactOnCompletion:</a></li>
+<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSContact/saveContactOnCompletion:" target="_top">saveContactOnCompletion:</a></li>
+<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSContact/updateContactOnCompletion:" target="_top">updateContactOnCompletion:</a></li>
 </ul>
 </div>
 </div>
