--- a/BeepSendSDK/BeepSendSDKDocumentation/BSGroup_h/Classes/BSGroup/toc.html
+++ b/BeepSendSDK/BeepSendSDKDocumentation/BSGroup_h/Classes/BSGroup/toc.html
@@ -46,16 +46,16 @@
 <div toc="collapsible" class="collapsible">
 <span class="hd_tocAccess">Instance Methods</span>
 <ul class="tocSubEntryList">
-<!-- instance method --><li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSGroup/addContact:" target="_top">addContact:</a></li>
-<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSGroup/addContacts:" target="_top">addContacts:</a></li>
+<!-- instance method --><li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSGroup/addContact:onCompletion:" target="_top">addContact:onCompletion:</a></li>
+<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSGroup/addContacts:onCompletion:" target="_top">addContacts:onCompletion:</a></li>
 <li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSGroup/initGroupWithID:name:contacts:" target="_top">initGroupWithID:name:contacts:</a></li>
 <li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSGroup/initGroupWithID:name:contacts:processing:" target="_top">initGroupWithID:&zwj;name:&zwj;contacts:&zwj;processing:&zwj;</a></li>
 <li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSGroup/initGroupWithName:" target="_top">initGroupWithName:</a></li>
-<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSGroup/removeContact:" target="_top">removeContact:</a></li>
-<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSGroup/removeContacts:" target="_top">removeContacts:</a></li>
-<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSGroup/removeGroup" target="_top">removeGroup</a></li>
-<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSGroup/saveGroup" target="_top">saveGroup</a></li>
-<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSGroup/updateGroup" target="_top">updateGroup</a></li>
+<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSGroup/removeContact:onCompletion:" target="_top">removeContact:onCompletion:</a></li>
+<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSGroup/removeContacts:onCompletion:" target="_top">removeContacts:onCompletion:</a></li>
+<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSGroup/removeGroupOnCompletion:" target="_top">removeGroupOnCompletion:</a></li>
+<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSGroup/saveGroupOnCompletion:" target="_top">saveGroupOnCompletion:</a></li>
+<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSGroup/updateGroupOnCompletion:" target="_top">updateGroupOnCompletion:</a></li>
 </ul>
 </div>
 </div>
