--- a/BeepSendSDK/BeepSendSDKDocumentation/BSWallet_h/Classes/BSWallet/toc.html
+++ b/BeepSendSDK/BeepSendSDKDocumentation/BSWallet_h/Classes/BSWallet/toc.html
@@ -46,17 +46,17 @@
 <div toc="collapsible" class="collapsible">
 <span class="hd_tocAccess">Instance Methods</span>
 <ul class="tocSubEntryList">
-<!-- instance method --><li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSWallet/addEmail:" target="_top">addEmail:</a></li>
+<!-- instance method --><li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSWallet/addEmail:onCompletion:" target="_top">addEmail:onCompletion:</a></li>
 <li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSWallet/getEmailsOnCompletion:" target="_top">getEmailsOnCompletion:</a></li>
 <li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSWallet/getTransactionLogForNextPage:onCompletion:" target="_top">getTransactionLogForNextPage:&zwj;onCompletion:&zwj;</a></li>
 <li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSWallet/initWalletWithID:name:balance:" target="_top">initWalletWithID:name:balance:</a></li>
 <li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSWallet/initWalletWithID:named:balance:minimumBalance:connections:users:" target="_top">initWalletWithID:&zwj;named:&zwj;balance:&zwj;minimumBalance:&zwj;connections:&zwj;users:&zwj;</a></li>
 <li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSWallet/initWalletWithName:limit:" target="_top">initWalletWithName:limit:</a></li>
-<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSWallet/removeEmail:" target="_top">removeEmail:</a></li>
+<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSWallet/removeEmail:onCompletion:" target="_top">removeEmail:onCompletion:</a></li>
 <li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSWallet/setMaximumLogCount:" target="_top">setMaximumLogCount:</a></li>
-<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSWallet/transferFunds:fromWallet:" target="_top">transferFunds:fromWallet:</a></li>
-<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSWallet/transferFunds:toWallet:" target="_top">transferFunds:toWallet:</a></li>
-<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSWallet/updateWallet" target="_top">updateWallet</a></li>
+<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSWallet/transferFunds:fromWallet:onCompletion:" target="_top">transferFunds:&zwj;fromWallet:&zwj;onCompletion:&zwj;</a></li>
+<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSWallet/transferFunds:toWallet:onCompletion:" target="_top">transferFunds:&zwj;toWallet:&zwj;onCompletion:&zwj;</a></li>
+<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSWallet/updateWalletOnCompletion:" target="_top">updateWalletOnCompletion:</a></li>
 </ul>
 </div>
 </div>
