--- a/BeepSendSDK/BeepSendSDKDocumentation/BSWallet_h/index.html
+++ b/BeepSendSDK/BeepSendSDKDocumentation/BSWallet_h/index.html
@@ -261,7 +261,7 @@ function disclosure_triangle(elt) {
 <div class="spec_sheet_info_box"><table cellspacing="0" class="specbox"><tr>
 <td scope="row"><b>Includes:</b></td>
 <td><div style="margin-bottom:1px"><div class="content_text">
-<!-- a logicalPath="//apple_ref/doc/header/BSGeneralModel.h" machineGenerated="true" -->"BSGeneralModel.h"<!-- /a --><br><a machinegenerated="true" href="../BSEmail_h/index.html#//apple_ref/doc/header/BSEmail.h" logicalPath="//apple_ref/doc/header/BSEmail.h" target="_top">"BSEmail.h"</a><br><a machinegenerated="true" href="../BSTransfer_h/index.html#//apple_ref/doc/header/BSTransfer.h" logicalPath="//apple_ref/doc/header/BSTransfer.h" target="_top">"BSTransfer.h"</a></div></div></td>
+<!-- a logicalPath="//apple_ref/doc/header/BSGeneralModel.h" machineGenerated="true" -->"BSGeneralModel.h"<!-- /a --><br><a machinegenerated="true" href="../BSEmail_h/index.html#//apple_ref/doc/header/BSEmail.h" logicalPath="//apple_ref/doc/header/BSEmail.h" target="_top">"BSEmail.h"</a><br><a machinegenerated="true" href="../BSTransfer_h/index.html#//apple_ref/doc/header/BSTransfer.h" logicalPath="//apple_ref/doc/header/BSTransfer.h" target="_top">"BSTransfer.h"</a><br><a machinegenerated="true" href="../BSLog_h/index.html#//apple_ref/doc/header/BSLog.h" logicalPath="//apple_ref/doc/header/BSLog.h" target="_top">"BSLog.h"</a></div></div></td>
 </tr></table></div>
 <h2>Introduction</h2>
 <p><!-- headerDoc=abstract;uid=//apple_ref/doc/header/BSWallet.h;name=start --><!-- begin abstract -->Use the links in the table of contents to the left to access the documentation.<br><!-- end abstract --><!-- headerDoc=abstract;uid=//apple_ref/doc/header/BSWallet.h;name=end --></p>
@@ -275,7 +275,7 @@ function disclosure_triangle(elt) {
 <p class="gapBeforeFooter">&nbsp;</p>
 <hr class="afterFooter">
 <div class="hd_copyright_and_timestamp">
-<p class="hd_timestamp">Last Updated: Thursday, July 31, 2014
+<p class="hd_timestamp">Last Updated: Friday, August 01, 2014
 </p>
 </div>
 </td>
