--- a/BeepSendSDK/BeepSendSDKDocumentation/masterTOC.html
+++ b/BeepSendSDK/BeepSendSDKDocumentation/masterTOC.html
@@ -186,7 +186,7 @@
 <a logicalpath="//apple_ref/occ/instm/BSAccountManager/initAccountManagerWithName:andEmail:" name="group___function_BS" retarget="yes" href="BSAccountManager_h/Classes/BSAccountManager/index.html#//apple_ref/occ/instm/BSAccountManager/initAccountManagerWithName:andEmail:">-[ BSAccountManager initAccountManagerWithName:andEmail: ]</a><br>
 </td>
 <td width="33%">
-<a logicalpath="//apple_ref/occ/instm/BSGroup/addContact:" retarget="yes" href="BSGroup_h/Classes/BSGroup/index.html#//apple_ref/occ/instm/BSGroup/addContact:">-[ BSGroup addContact: ]</a><br>
+<a logicalpath="//apple_ref/occ/instm/BSGroup/addContact:onCompletion:" retarget="yes" href="BSGroup_h/Classes/BSGroup/index.html#//apple_ref/occ/instm/BSGroup/addContact:onCompletion:">-[ BSGroup addContact:onCompletion: ]</a><br>
 </td>
 <td width="33%">
 <a logicalpath="//apple_ref/occ/instm/BSUser/addMultipleContacts:onCompletion:" retarget="yes" href="BSUser_h/Classes/BSUser/index.html#//apple_ref/occ/instm/BSUser/addMultipleContacts:onCompletion:">-[ BSUser addMultipleContacts:onCompletion: ]</a><br>
@@ -197,7 +197,7 @@
 <a logicalpath="//apple_ref/occ/instm/BSAccumulatedStatistics/initWithAccount:count:price:" retarget="yes" href="BSAccumulatedStatistics_h/Classes/BSAccumulatedStatistics/index.html#//apple_ref/occ/instm/BSAccumulatedStatistics/initWithAccount:count:price:">-[ BSAccumulatedStatistics initWithAccount:count:price: ]</a><br>
 </td>
 <td width="33%">
-<a logicalpath="//apple_ref/occ/instm/BSGroup/addContacts:" retarget="yes" href="BSGroup_h/Classes/BSGroup/index.html#//apple_ref/occ/instm/BSGroup/addContacts:">-[ BSGroup addContacts: ]</a><br>
+<a logicalpath="//apple_ref/occ/instm/BSGroup/addContacts:onCompletion:" retarget="yes" href="BSGroup_h/Classes/BSGroup/index.html#//apple_ref/occ/instm/BSGroup/addContacts:onCompletion:">-[ BSGroup addContacts:onCompletion: ]</a><br>
 </td>
 <td width="33%">
 <a logicalpath="//apple_ref/occ/instm/BSUser/changePassword:withNewPassword:onCompletion:" retarget="yes" href="BSUser_h/Classes/BSUser/index.html#//apple_ref/occ/instm/BSUser/changePassword:withNewPassword:onCompletion:">-[ BSUser changePassword:withNewPassword:onCompletion: ]</a><br>
@@ -241,7 +241,7 @@
 <a logicalpath="//apple_ref/occ/instm/BSCallbacks/initCallbackWithMethod:dlr:mo:" retarget="yes" href="BSCallbacks_h/Classes/BSCallbacks/index.html#//apple_ref/occ/instm/BSCallbacks/initCallbackWithMethod:dlr:mo:">-[ BSCallbacks initCallbackWithMethod:dlr:mo: ]</a><br>
 </td>
 <td width="33%">
-<a logicalpath="//apple_ref/occ/instm/BSGroup/removeContact:" retarget="yes" href="BSGroup_h/Classes/BSGroup/index.html#//apple_ref/occ/instm/BSGroup/removeContact:">-[ BSGroup removeContact: ]</a><br>
+<a logicalpath="//apple_ref/occ/instm/BSGroup/removeContact:onCompletion:" retarget="yes" href="BSGroup_h/Classes/BSGroup/index.html#//apple_ref/occ/instm/BSGroup/removeContact:onCompletion:">-[ BSGroup removeContact:onCompletion: ]</a><br>
 </td>
 <td width="33%">
 <a logicalpath="//apple_ref/occ/instm/BSUser/getAllGroups" retarget="yes" href="BSUser_h/Classes/BSUser/index.html#//apple_ref/occ/instm/BSUser/getAllGroups">-[ BSUser getAllGroups ]</a><br>
@@ -252,7 +252,7 @@
 <a logicalpath="//apple_ref/occ/clm/BSConnection/currentConnection" retarget="yes" href="BSConnection_h/Classes/BSConnection/index.html#//apple_ref/occ/clm/BSConnection/currentConnection">+[ BSConnection currentConnection ]</a><br>
 </td>
 <td width="33%">
-<a logicalpath="//apple_ref/occ/instm/BSGroup/removeContacts:" retarget="yes" href="BSGroup_h/Classes/BSGroup/index.html#//apple_ref/occ/instm/BSGroup/removeContacts:">-[ BSGroup removeContacts: ]</a><br>
+<a logicalpath="//apple_ref/occ/instm/BSGroup/removeContacts:onCompletion:" retarget="yes" href="BSGroup_h/Classes/BSGroup/index.html#//apple_ref/occ/instm/BSGroup/removeContacts:onCompletion:">-[ BSGroup removeContacts:onCompletion: ]</a><br>
 </td>
 <td width="33%">
 <a logicalpath="//apple_ref/occ/instm/BSUser/getAllGroupsOnCompletion:" retarget="yes" href="BSUser_h/Classes/BSUser/index.html#//apple_ref/occ/instm/BSUser/getAllGroupsOnCompletion:">-[ BSUser getAllGroupsOnCompletion: ]</a><br>
@@ -263,7 +263,7 @@
 <a logicalpath="//apple_ref/occ/instm/BSConnection/estimateSMSCostForMessages:onCompletion:" retarget="yes" href="BSConnection_h/Classes/BSConnection/index.html#//apple_ref/occ/instm/BSConnection/estimateSMSCostForMessages:onCompletion:">-[ BSConnection estimateSMSCostForMessages:onCompletion: ]</a><br>
 </td>
 <td width="33%">
-<a logicalpath="//apple_ref/occ/instm/BSGroup/removeGroup" retarget="yes" href="BSGroup_h/Classes/BSGroup/index.html#//apple_ref/occ/instm/BSGroup/removeGroup">-[ BSGroup removeGroup ]</a><br>
+<a logicalpath="//apple_ref/occ/instm/BSGroup/removeGroupOnCompletion:" retarget="yes" href="BSGroup_h/Classes/BSGroup/index.html#//apple_ref/occ/instm/BSGroup/removeGroupOnCompletion:">-[ BSGroup removeGroupOnCompletion: ]</a><br>
 </td>
 <td width="33%">
 <a logicalpath="//apple_ref/occ/instm/BSUser/getAnalyticsSummaryFromDate:toDate:withCompletionBlock:" retarget="yes" href="BSUser_h/Classes/BSUser/index.html#//apple_ref/occ/instm/BSUser/getAnalyticsSummaryFromDate:toDate:withCompletionBlock:">-[ BSUser getAnalyticsSummaryFromDate:toDate:withCompletionBlock: ]</a><br>
@@ -274,7 +274,7 @@
 <a logicalpath="//apple_ref/occ/instm/BSConnection/getAnalyticsSummaryFromDate:toDate:withCompletionBlock:" retarget="yes" href="BSConnection_h/Classes/BSConnection/index.html#//apple_ref/occ/instm/BSConnection/getAnalyticsSummaryFromDate:toDate:withCompletionBlock:">-[ BSConnection getAnalyticsSummaryFromDate:toDate:withCompletionBlock: ]</a><br>
 </td>
 <td width="33%">
-<a logicalpath="//apple_ref/occ/instm/BSGroup/saveGroup" retarget="yes" href="BSGroup_h/Classes/BSGroup/index.html#//apple_ref/occ/instm/BSGroup/saveGroup">-[ BSGroup saveGroup ]</a><br>
+<a logicalpath="//apple_ref/occ/instm/BSGroup/saveGroupOnCompletion:" retarget="yes" href="BSGroup_h/Classes/BSGroup/index.html#//apple_ref/occ/instm/BSGroup/saveGroupOnCompletion:">-[ BSGroup saveGroupOnCompletion: ]</a><br>
 </td>
 <td width="33%">
 <a logicalpath="//apple_ref/occ/instm/BSUser/getAvailableConnections" retarget="yes" href="BSUser_h/Classes/BSUser/index.html#//apple_ref/occ/instm/BSUser/getAvailableConnectionsOnCompletion:">-[ BSUser getAvailableConnections ]</a><br>
@@ -285,7 +285,7 @@
 <a logicalpath="//apple_ref/occ/instm/BSConnection/getCurrentPricelistOnCompletion:" retarget="yes" href="BSConnection_h/Classes/BSConnection/index.html#//apple_ref/occ/instm/BSConnection/getCurrentPricelistOnCompletion:">-[ BSConnection getCurrentPricelistOnCompletion: ]</a><br>
 </td>
 <td width="33%">
-<a logicalpath="//apple_ref/occ/instm/BSGroup/updateGroup" retarget="yes" href="BSGroup_h/Classes/BSGroup/index.html#//apple_ref/occ/instm/BSGroup/updateGroup">-[ BSGroup updateGroup ]</a><br>
+<a logicalpath="//apple_ref/occ/instm/BSGroup/updateGroupOnCompletion:" retarget="yes" href="BSGroup_h/Classes/BSGroup/index.html#//apple_ref/occ/instm/BSGroup/updateGroupOnCompletion:">-[ BSGroup updateGroupOnCompletion: ]</a><br>
 </td>
 <td width="33%">
 <a logicalpath="//apple_ref/occ/instm/BSUser/getAvailableConnectionsOnCompletion:" retarget="yes" href="BSUser_h/Classes/BSUser/index.html#//apple_ref/occ/instm/BSUser/getAvailableConnectionsOnCompletion:">-[ BSUser getAvailableConnectionsOnCompletion: ]</a><br>
@@ -414,7 +414,7 @@
 </tr>
 <tr>
 <td width="33%">
-<a logicalpath="//apple_ref/occ/instm/BSConnection/resetConnectionToken" retarget="yes" href="BSConnection_h/Classes/BSConnection/index.html#//apple_ref/occ/instm/BSConnection/resetConnectionToken">-[ BSConnection resetConnectionToken ]</a><br>
+<a logicalpath="//apple_ref/occ/instm/BSConnection/resetConnectionTokenOnCompletion:" retarget="yes" href="BSConnection_h/Classes/BSConnection/index.html#//apple_ref/occ/instm/BSConnection/resetConnectionTokenOnCompletion:">-[ BSConnection resetConnectionTokenOnCompletion: ]</a><br>
 </td>
 <td width="33%">
 <a logicalpath="//apple_ref/occ/clm/BSMessage/flashMessageWithBody:from:toGroups:" retarget="yes" href="BSMessage_h/Classes/BSMessage/index.html#//apple_ref/occ/clm/BSMessage/flashMessageWithBody:from:toGroups:">+[ BSMessage flashMessageWithBody:from:toGroups: ]</a><br>
@@ -480,7 +480,7 @@
 </tr>
 <tr>
 <td width="33%">
-<a logicalpath="//apple_ref/occ/instm/BSConnection/updateConnection" retarget="yes" href="BSConnection_h/Classes/BSConnection/index.html#//apple_ref/occ/instm/BSConnection/updateConnection">-[ BSConnection updateConnection ]</a><br>
+<a logicalpath="//apple_ref/occ/instm/BSConnection/updateConnectionOnCompletion:" retarget="yes" href="BSConnection_h/Classes/BSConnection/index.html#//apple_ref/occ/instm/BSConnection/updateConnectionOnCompletion:">-[ BSConnection updateConnectionOnCompletion: ]</a><br>
 </td>
 <td width="33%">
 <a logicalpath="//apple_ref/occ/clm/BSMessage/messageWithBody:from:toGroups:" retarget="yes" href="BSMessage_h/Classes/BSMessage/index.html#//apple_ref/occ/clm/BSMessage/messageWithBody:from:toGroups:">+[ BSMessage messageWithBody:from:toGroups: ]</a><br>
@@ -519,7 +519,7 @@
 <a logicalpath="//apple_ref/occ/instm/BSMessage/scheduleSendingAtTime:" retarget="yes" href="BSMessage_h/Classes/BSMessage/index.html#//apple_ref/occ/instm/BSMessage/scheduleSendingAtTime:">-[ BSMessage scheduleSendingAtTime: ]</a><br>
 </td>
 <td width="33%">
-<a logicalpath="//apple_ref/occ/instm/BSWallet/addEmail:" retarget="yes" href="BSWallet_h/Classes/BSWallet/index.html#//apple_ref/occ/instm/BSWallet/addEmail:">-[ BSWallet addEmail: ]</a><br>
+<a logicalpath="//apple_ref/occ/instm/BSWallet/addEmail:onCompletion:" retarget="yes" href="BSWallet_h/Classes/BSWallet/index.html#//apple_ref/occ/instm/BSWallet/addEmail:onCompletion:">-[ BSWallet addEmail:onCompletion: ]</a><br>
 </td>
 </tr>
 <tr>
@@ -535,7 +535,7 @@
 </tr>
 <tr>
 <td width="33%">
-<a logicalpath="//apple_ref/occ/instm/BSContact/removeContact" retarget="yes" href="BSContact_h/Classes/BSContact/index.html#//apple_ref/occ/instm/BSContact/removeContact">-[ BSContact removeContact ]</a><br>
+<a logicalpath="//apple_ref/occ/instm/BSContact/removeContactOnCompletion:" retarget="yes" href="BSContact_h/Classes/BSContact/index.html#//apple_ref/occ/instm/BSContact/removeContactOnCompletion:">-[ BSContact removeContactOnCompletion: ]</a><br>
 </td>
 <td width="33%">
 <a logicalpath="//apple_ref/occ/instm/BSMessage/setValidityPeriod:" retarget="yes" href="BSMessage_h/Classes/BSMessage/index.html#//apple_ref/occ/instm/BSMessage/setValidityPeriod:">-[ BSMessage setValidityPeriod: ]</a><br>
@@ -546,7 +546,7 @@
 </tr>
 <tr>
 <td width="33%">
-<a logicalpath="//apple_ref/occ/instm/BSContact/saveContact" retarget="yes" href="BSContact_h/Classes/BSContact/index.html#//apple_ref/occ/instm/BSContact/saveContact">-[ BSContact saveContact ]</a><br>
+<a logicalpath="//apple_ref/occ/instm/BSContact/saveContactOnCompletion:" retarget="yes" href="BSContact_h/Classes/BSContact/index.html#//apple_ref/occ/instm/BSContact/saveContactOnCompletion:">-[ BSContact saveContactOnCompletion: ]</a><br>
 </td>
 <td width="33%">
 <a logicalpath="//apple_ref/occ/instm/BSNetwork/operator_initNetworkWithMCCMNC:withComment:price:fromCountry:operator:" retarget="yes" href="BSNetwork_h/Classes/BSNetwork/index.html#//apple_ref/occ/instm/BSNetwork/operator_initNetworkWithMCCMNC:withComment:price:fromCountry:operator:">-[ BSNetwork operator initNetworkWithMCCMNC:withComment:price:fromCountry:operator: ]</a><br>
@@ -557,7 +557,7 @@
 </tr>
 <tr>
 <td width="33%">
-<a logicalpath="//apple_ref/occ/instm/BSContact/updateContact" retarget="yes" href="BSContact_h/Classes/BSContact/index.html#//apple_ref/occ/instm/BSContact/updateContact">-[ BSContact updateContact ]</a><br>
+<a logicalpath="//apple_ref/occ/instm/BSContact/updateContactOnCompletion:" retarget="yes" href="BSContact_h/Classes/BSContact/index.html#//apple_ref/occ/instm/BSContact/updateContactOnCompletion:">-[ BSContact updateContactOnCompletion: ]</a><br>
 </td>
 <td width="33%">
 <a logicalpath="//apple_ref/occ/instm/BSNetworkDetails/initWithMCCMNC:statistics:total:" retarget="yes" href="BSNetworkDetails_h/Classes/BSNetworkDetails/index.html#//apple_ref/occ/instm/BSNetworkDetails/initWithMCCMNC:statistics:total:">-[ BSNetworkDetails initWithMCCMNC:statistics:total: ]</a><br>
@@ -585,7 +585,7 @@
 <a logicalpath="//apple_ref/occ/instm/BSPriceListDetails/initPricelistDetailsWithType:delimiter:pricelistSchedule:fields:" retarget="yes" href="BSPriceListDetails_h/Classes/BSPriceListDetails/index.html#//apple_ref/occ/instm/BSPriceListDetails/initPricelistDetailsWithType:delimiter:pricelistSchedule:fields:">-[ BSPriceListDetails initPricelistDetailsWithType:delimiter:pricelistSchedule:fields: ]</a><br>
 </td>
 <td width="33%">
-<a logicalpath="//apple_ref/occ/instm/BSWallet/removeEmail:" retarget="yes" href="BSWallet_h/Classes/BSWallet/index.html#//apple_ref/occ/instm/BSWallet/removeEmail:">-[ BSWallet removeEmail: ]</a><br>
+<a logicalpath="//apple_ref/occ/instm/BSWallet/removeEmail:onCompletion:" retarget="yes" href="BSWallet_h/Classes/BSWallet/index.html#//apple_ref/occ/instm/BSWallet/removeEmail:onCompletion:">-[ BSWallet removeEmail:onCompletion: ]</a><br>
 </td>
 </tr>
 <tr>
@@ -607,7 +607,7 @@
 <a logicalpath="//apple_ref/occ/instm/BSRecipient/initRecipientWithNumber:numberType:planIndex:" retarget="yes" href="BSRecipient_h/Classes/BSRecipient/index.html#//apple_ref/occ/instm/BSRecipient/initRecipientWithNumber:numberType:planIndex:">-[ BSRecipient initRecipientWithNumber:numberType:planIndex: ]</a><br>
 </td>
 <td width="33%">
-<a logicalpath="//apple_ref/occ/instm/BSWallet/transferFunds:fromWallet:" retarget="yes" href="BSWallet_h/Classes/BSWallet/index.html#//apple_ref/occ/instm/BSWallet/transferFunds:fromWallet:">-[ BSWallet transferFunds:fromWallet: ]</a><br>
+<a logicalpath="//apple_ref/occ/instm/BSWallet/transferFunds:fromWallet:onCompletion:" retarget="yes" href="BSWallet_h/Classes/BSWallet/index.html#//apple_ref/occ/instm/BSWallet/transferFunds:fromWallet:onCompletion:">-[ BSWallet transferFunds:fromWallet:onCompletion: ]</a><br>
 </td>
 </tr>
 <tr>
@@ -618,7 +618,7 @@
 <a logicalpath="//apple_ref/occ/instm/BSStatistics/initWithDelivered:mo:expired:unknown:rejected:undelivered:noDlr:" retarget="yes" href="BSStatistics_h/Classes/BSStatistics/index.html#//apple_ref/occ/instm/BSStatistics/initWithDelivered:mo:expired:unknown:rejected:undelivered:noDlr:">-[ BSStatistics initWithDelivered:mo:expired:unknown:rejected:undelivered:noDlr: ]</a><br>
 </td>
 <td width="33%">
-<a logicalpath="//apple_ref/occ/instm/BSWallet/transferFunds:toWallet:" retarget="yes" href="BSWallet_h/Classes/BSWallet/index.html#//apple_ref/occ/instm/BSWallet/transferFunds:toWallet:">-[ BSWallet transferFunds:toWallet: ]</a><br>
+<a logicalpath="//apple_ref/occ/instm/BSWallet/transferFunds:toWallet:onCompletion:" retarget="yes" href="BSWallet_h/Classes/BSWallet/index.html#//apple_ref/occ/instm/BSWallet/transferFunds:toWallet:onCompletion:">-[ BSWallet transferFunds:toWallet:onCompletion: ]</a><br>
 </td>
 </tr>
 <tr>
@@ -629,7 +629,7 @@
 <a logicalpath="//apple_ref/occ/instm/BSTimestamps/initReportWithHLRReport:andCallbackSentTime:" retarget="yes" href="BSTimestamps_h/Classes/BSTimestamps/index.html#//apple_ref/occ/instm/BSTimestamps/initReportWithHLRReport:andCallbackSentTime:">-[ BSTimestamps initReportWithHLRReport:andCallbackSentTime: ]</a><br>
 </td>
 <td width="33%">
-<a logicalpath="//apple_ref/occ/instm/BSWallet/updateWallet" retarget="yes" href="BSWallet_h/Classes/BSWallet/index.html#//apple_ref/occ/instm/BSWallet/updateWallet">-[ BSWallet updateWallet ]</a><br>
+<a logicalpath="//apple_ref/occ/instm/BSWallet/updateWalletOnCompletion:" retarget="yes" href="BSWallet_h/Classes/BSWallet/index.html#//apple_ref/occ/instm/BSWallet/updateWalletOnCompletion:">-[ BSWallet updateWalletOnCompletion: ]</a><br>
 </td>
 </tr>
 <tr>
